# StarDist-Zarr-RSE-exercise

./: README.md  pyproject.toml  sample_config.yaml
stardist_zarr/: io.py  main.py  pipeline.py
